Settings Page: Prevent Logo Overlap
Also re-ordered adjusted selector properties.

--- a/settings/admin-settings.less
+++ b/settings/admin-settings.less
@@ -42,9 +42,9 @@
 		}
 
 		h1 {
-			font: 300 2.3em/1.4em "proxima-nova", "Open Sans", Helvetica, Arial, sans-serif;
 			color: #666;
-			/* text-shadow: 0 1px 1px rgba(0,0,0,0.2); */
+			font: 300 2.3em/1.4em "proxima-nova", "Open Sans", Helvetica, Arial, sans-serif;
+			padding: 9px 0 15px;
 		}
 
 
@@ -95,9 +95,9 @@
 	.settings-nav {
 		background: #f6f6f6;
 		border-bottom: 1px solid #d6d6d6;
-		padding: 5px 0 0 30px;
-		margin: 0;
 		font-size: 0;
+		margin: 0;
+		padding-left: 30px;
 
 		li{
 			display: inline-block;
